fixed weird errors in pdf conversion and added to more notebooks in pdf

--- a/notebooks/differential_privacy/differential_privacy_exponential.ipynb
+++ b/notebooks/differential_privacy/differential_privacy_exponential.ipynb
@@ -254,7 +254,9 @@
    "source": [
     "The trade-off between accuracy and privacy can be assessed by computing the mean revenue loss, which is defined as\n",
     "\n",
-    "$${\\rm {loss}}= |u_{\\rm{OPT}}(x) - u(x,r_{\\rm{sample}})|$$ \n",
+    "$$\n",
+    "{\\rm {loss}}= |u_{\\rm{OPT}}(x) - u(x,r_{\\rm{sample}})|\n",
+    "$$ \n",
     "\n",
     "where $u_{\\rm{OPT}}(x)$ is the highest possible revenue for a fixed database $x$, and $u(x,r_{\\rm{sample}})$ is the revenue at the sampled price $r_{\\rm{sample}}$.\n",
     "\n",
