--- a/notebooks/differential_privacy/differential_privacy_laplace.ipynb
+++ b/notebooks/differential_privacy/differential_privacy_laplace.ipynb
@@ -169,9 +169,9 @@
    "source": [
     "As we can see, the value obtained is approximately the expected value for the sensitivity.\n",
     "\n",
-    "For smaller values of  𝜖 , the amount of privacy is higher, but the utility is lower. For example, if one wishes to compute the mean height over a given population, the accuracy of the result would be degraded as the amount of privacy increases. This is shown in the experiment below.\n",
+    "For smaller values of $\\epsilon$ , the amount of privacy is higher, but the utility is lower. For example, if one wishes to compute the mean height over a given population, the accuracy of the result would be degraded as the amount of privacy increases. This is shown in the experiment below.\n",
     "\n",
-    "In particular, we consider a population of 500 people with a mean height $\\text{true_mean}$. \n",
+    "In particular, we consider a population of 500 people with a mean height $true_mean$. \n",
     "However, these report their heights with a Laplace noise controlled by $\\epsilon$ and the sensitivity $\\Delta f$, which is then used to estimate the mean height. \n",
     "Wee see that as $\\epsilon$ decreases, the error in this estimate increases."
    ]
