--- a/notebooks/differential_privacy/differential_privacy_composition_concepts.ipynb
+++ b/notebooks/differential_privacy/differential_privacy_composition_concepts.ipynb
@@ -154,9 +154,9 @@
     "\n",
     "For all $\\epsilon, \\delta, \\delta' \\geq 0$ the composition of a sequence $\\{\\mathcal{M}_k\\}$ of ($\\epsilon, \\delta$)-differentially private mechanisms under the Composition experiment with $M=\\{\\mathcal{M}_k\\}$, satisfies ($\\epsilon', \\delta''$)-DP with:\n",
     "\n",
-    "\\begin{equation} \\label{eq_advanced_comp}\n",
+    "$$\n",
     "\\epsilon' = \\sqrt{2k\\ln(1/\\delta')} + k \\epsilon(e^{\\epsilon}-1) \\quad \\text{and} \\quad \\delta'' = k\\delta + \\delta'\n",
-    "\\end{equation}\n",
+    "$$\n",
     "\n",
     "In other words, for an small sacrifice $\\delta$' in the global $\\delta$ spent, we can achieve a better bound for the global $\\epsilon$ spent. However, the theorem assumes that the same dp-mechanism is used in each access:\n"
    ]
@@ -225,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So we can conclude that the benefits of the advanced theorem are only noticeable when the number of mechanism access are huge. In particular, we can observe that for values of k close to 150 (and $\\delta=0.1$), the theorems are almost indentical"
+    "So we can conclude that the benefits of the advanced theorem are only noticeable when the number of mechanism access are huge. In particular, we can observe that for values of $k$ close to 150 (and $\\delta=0.1$), the theorems are almost indentical"
    ]
   },
   {
@@ -269,35 +269,36 @@
     "**Basic composition for Privacy Filters**\n",
     "\n",
     "For any $\\epsilon_g, \\delta_g \\geq 0,\\ $ $\\texttt{COMP}_{\\epsilon_g, \\delta_g}$ is valid Privacy Filter: \n",
-    "\\begin{equation*}\n",
+    "\n",
+    "$$\n",
     " \\texttt{COMP}_{\\epsilon_g,\\delta_g}(\\epsilon_1,\\delta_1,...,\\epsilon_{k},\\delta_{k})= \\begin{cases} \n",
     "      \\texttt{HALT} & \\text{if}\\  \\sum_{i=1}^{k} \\delta_i > \\delta_g \\ \\ \\ \\text{or} \\ \\ \\ \\sum_{i=1}^{k} \\epsilon_i > \\epsilon_g, \\\\\n",
     "      \\texttt{CONT} & \\text{otherwise}\n",
     "\\end{cases}\n",
-    "\\end{equation*}\n",
+    "$$\n",
     "\n",
     "**Advanced composition for Privacy Filters**\n",
     "\n",
     "We define $\\mathcal{K}$ as follows:\n",
-    "\\begin{equation*}\n",
+    "$$\n",
     "    \\mathcal{K} :=  \\sum_{j=1}^{k} \\epsilon_j \\left( \\frac{\\exp{(\\epsilon_j)}-1}{2} \\right) + \n",
     "                \\sqrt{\\left( \\sum_{i=1}^{k} \\epsilon_i^2 + H \\right) \\left( 2 + \\ln{\\big( \\frac{1}{H} \\sum_{i=1}^{k} \\epsilon_i^2 +1 \\big)} \\right) \\ln{(2/\\delta_g)}}\n",
-    "\\end{equation*}\n",
+    "$$\n",
     "\n",
-    "with $ H = \\frac{\\epsilon_g^2}{28.04 \\ln(1/\\delta_g)}$.\n",
+    "with $$ H = \\frac{\\epsilon_g^2}{28.04 \\ln(1/\\delta_g)} $$\n",
     " \n",
     "Then $\\texttt{COMP}_{\\epsilon_g, \\delta_g}$ is a valid Privacy Filter for $\\delta_g \\in (0, 1/e)$ and $\\epsilon_g > 0$, where:\n",
-    "\\begin{equation*}\n",
+    "$$\n",
     " \\texttt{COMP}_{\\epsilon_g,\\delta_g}(\\epsilon_1,\\delta_1,...,\\epsilon_{k},\\delta_{k})= \\begin{cases} \n",
     "      \\texttt{HALT} & \\text{if}\\  \\sum_{i=1}^{k} \\delta_i > \\delta_g/2 \\ \\ \\ \\text{or} \\ \\ \\ \\mathcal{K} > \\epsilon_g, \\\\\n",
     "      \\texttt{CONT} & \\text{otherwise}\n",
     "\\end{cases}\n",
-    "\\end{equation*}\n",
+    "$$\n",
     "\n",
     "The value of $\\mathcal{K}$ might be strange at first sight, however if we assume $\\epsilon_j=\\epsilon$ for all $j$, it remains:\n",
-    "\\begin{equation*}\n",
+    "$$\n",
     "    \\mathcal{K} = \\sqrt{ \\left(k\\epsilon^2 + H\\right)\\left(2+\\ln{(\\frac{k\\epsilon^2}{H} + 1)}\\right) \\ln{(2/\\delta)}} + k\\epsilon^2 \\left(\\frac{\\exp{(\\epsilon)}-1}{2}\\right)\n",
-    "\\end{equation*}\n",
+    "$$\n",
     "which is quite similar to the expression given in the advanced composition theorem.\n",
     "\n",
     "\n",
