fixed broken links

--- a/notebooks/federated_models/federated_models_clustering_k_means.ipynb
+++ b/notebooks/federated_models/federated_models_clustering_k_means.ipynb
@@ -96,7 +96,7 @@
     "\n",
     "Since the labels of clusters can vary among each node, we cannot average the centroids right away. \n",
     "A solution is to choose the lowest distance average: this is achieved by simply applying the k-means algorithm on the centroids coordinates of all nodes. \n",
-    "In [ClusterFedAvgAggregator](../shfl/federated_aggregator/cluster_fedavg_aggregator.py) you can see its implementation.\n",
+    "In [ClusterFedAvgAggregator](../../shfl/federated_aggregator/cluster_fedavg_aggregator.py) you can see its implementation.\n",
     "\n",
     "**Remark**: this implementation is based on the assumption that the number of clusters is previously fixed across the clients, so it only works properly in I.I.D scenarios (see [Federated Sampling](../federated_learning/federated_learning_sampling.ipynb)). We are working in a federated aggregation operator which works in every distribution of data across clients."
    ]
