replaced all relative links except notebook ones with github links

--- a/notebooks/federated_learning/federated_learning_basic_concepts_aggregation_operators.ipynb
+++ b/notebooks/federated_learning/federated_learning_basic_concepts_aggregation_operators.ipynb
@@ -87,7 +87,7 @@
    "source": [
     "## Federated Averaging (`FedAvg`) Operator\n",
     "\n",
-    "In this section, we detail the implementation of FedAvg (see [FedAVg](../../shfl/federated_aggregator/fedavg_aggregator.py)) proposed  by Google in this [paper](https://arxiv.org/abs/1602.05629). \n",
+    "In this section, we detail the implementation of FedAvg (see [FedAVg](https://github.com/sherpaai/Sherpa.FL/blob/master/shfl/federated_aggregator/fedavg_aggregator.py)) proposed  by Google in this [paper](https://arxiv.org/abs/1602.05629). \n",
     "\n",
     "It is based on the arithmetic mean of the local weights $W_i$ trained in each of the local clients $C_i$. That is, the weights $W$ of the global model after each round of training are\n",
     "\n",
@@ -137,7 +137,7 @@
    "source": [
     "## Weighted Federated Averaging (`WeightedFedAvg`) Operator\n",
     "\n",
-    "In this section, we detail the implementation of `WeightedFedAvg` (see [WeightedFedAVg](../../shfl/federated_aggregator/weighted_fedavg_aggregator.py)). It is the weighted version of `FedAvg`. The weight of each client $C_i$ is determined by the amount of client's data $n_i$ with respect to total training data $n$. That is, the parameters $W$ of the global model after each round of training are \n",
+    "In this section, we detail the implementation of `WeightedFedAvg` (see [WeightedFedAVg](https://github.com/sherpaai/Sherpa.FL/blob/master/shfl/federated_aggregator/weighted_fedavg_aggregator.py)). It is the weighted version of `FedAvg`. The weight of each client $C_i$ is determined by the amount of client's data $n_i$ with respect to total training data $n$. That is, the parameters $W$ of the global model after each round of training are \n",
     "\n",
     "$$W =  \\sum_{i=1}^n \\frac{n_i}{n} W_i$$\n",
     "\n",
@@ -212,7 +212,7 @@
    "source": [
     "## Cluster Federated Averaging (`ClusterFedAvg`) Operator\n",
     "\n",
-    "In this section, we detail the implementation of `ClusterFedAvg` (see [ClusterFedAVg](../../shfl/federated_aggregator/cluster_fedavg_aggregator.py)). \n",
+    "In this section, we detail the implementation of `ClusterFedAvg` (see [ClusterFedAVg](https://github.com/sherpaai/Sherpa.FL/blob/master/shfl/federated_aggregator/cluster_fedavg_aggregator.py)). \n",
     "\n",
     "It consists on the aggregation operator used for k-means clustering. When aggregating the centroids of a federated k-means clustering we face with the problem of grouping the clusters for subsequent aggregation. Based on the hypothesis that the closest centroids will belong to the same cluster, we apply K-Means over the centroids in order to group the centroids which belong to the same cluster and to obtain the representation (aggregation) of each group. We choose as the aggregation the new centroids obtained.\n",
     "\n",
