--- a/notebooks/federated_learning/federated_learning_evaluation_methodology.ipynb
+++ b/notebooks/federated_learning/federated_learning_evaluation_methodology.ipynb
@@ -136,7 +136,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we split each client's data in train and test partitions. You can find this method in [Federated Operation](../../shfl/private/federated_operation.py). "
+    "First, we split each client's data in train and test partitions. You can find this method in [Federated Operation](https://github.com/sherpaai/Sherpa.FL/blob/master/shfl/private/federated_operation.py). "
    ]
   },
   {
