--- a/notebooks/federated_models/federated_models_custom_model.ipynb
+++ b/notebooks/federated_models/federated_models_custom_model.ipynb
@@ -201,7 +201,7 @@
     "In the case of applying the Laplace privacy mechanism (see also [Laplace mechanism notebook](../differential_privacy/differential_privacy_laplace.ipynb)), the noise added has to be of the order of the sensitivity of the model's output (the values of the intercept and slope in our 2D linear regression). \n",
     "In the general case, model's sensitivity might be difficult to compute analytically. \n",
     "An alternative approach is to attain *random* differential privacy through a sampling over the data (see [Rubinstein 2017](https://arxiv.org/pdf/1706.02562.pdf)). That is, instead of computing analytically the *global* sensitivity $\\Delta f$, we compute an *empirical estimation* of it by sampling over the dataset.\n",
-    "The framework provides a method to sample the sensitivity (see the implementation [here](../../shfl/differential_privacy/sensitivity_sampler.py)).\n",
+    "The framework provides a method to sample the sensitivity (see the implementation [here](https://github.com/sherpaai/Sherpa.FL/blob/master/shfl/differential_privacy/sensitivity_sampler.py)).\n",
     "\n",
     "In order to carry out this approach, we need to specify a distribution of the data to sample from. \n",
     "This in general requires previous knowledge and/or model assumptions. \n",
