Using updated name in links

--- a/notebooks/differential_privacy/differential_privacy_composition_concepts.ipynb
+++ b/notebooks/differential_privacy/differential_privacy_composition_concepts.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "This notebook is a continuation of the notebook [differential_privacy_basic_concepts](./differential_privacy_basic_concepts.ipynb), we show more advanced concepts in Differential Privacy (DP) such as the composition theorems and how to use them in Sherpa.FL. Before diving in, we recommend reading section 3.5 from [The Algorithmic Foundations of Differential Privacy](https://www.cis.upenn.edu/~aaroth/Papers/privacybook.pdf) and everything related to Privacy Filters from this paper [Privacy Odometers and Filters: Pay-as-you-Go Composition](https://arxiv.org/pdf/1605.08294.pdf).\n",
+    "This notebook is a continuation of the notebook [differential_privacy_basic_concepts](./differential_privacy_basic_concepts.ipynb), we show more advanced concepts in Differential Privacy (DP) such as the composition theorems and how to use them in Sherpa.ai Federated Learning Framework. Before diving in, we recommend reading section 3.5 from [The Algorithmic Foundations of Differential Privacy](https://www.cis.upenn.edu/~aaroth/Papers/privacybook.pdf) and everything related to Privacy Filters from this paper [Privacy Odometers and Filters: Pay-as-you-Go Composition](https://arxiv.org/pdf/1605.08294.pdf).\n",
     "\n",
     "# Composition theorems\n",
     "\n",
@@ -23,7 +23,7 @@
     "\n",
     "### Note on neighbouring databases:\n",
     "\n",
-    "It is important to know that when it comes to numeric databases, such as two arrays, $A=[1,2,3,4]$ and $B=[1,2,3,8]$ (which by the way is the main use case of DP for Sherpa.FL). They are neighbouring databases if they differ in only one component as much as 1 (the must have the same length), therefore A and B aren't neighbouring databases but $C=[1,28,91]$ and $D=[2,28,91]$ are."
+    "It is important to know that when it comes to numeric databases, such as two arrays, $A=[1,2,3,4]$ and $B=[1,2,3,8]$ (which by the way is the main use case of DP for Sherpa.ai Federated Learning Framework). They are neighbouring databases if they differ in only one component as much as 1 (the must have the same length), therefore A and B aren't neighbouring databases but $C=[1,28,91]$ and $D=[2,28,91]$ are."
    ]
   },
   {
@@ -303,7 +303,7 @@
     "\n",
     "\n",
     "\n",
-    "## Privacy filters in Sherpa.FL\n",
+    "## Privacy filters in Sherpa.ai Federated Learning Framework\n",
     "\n",
     "This frameworks implements Privacy Filters and transparently applies both theorems stated before, so that there is no need to constantly check which theorem ensures a better ($\\epsilon, \\delta$) expense. When the fixed privacy budget is surpassed, an exception ExceededPrivacyBudgetError is thrown. The following example shows two equivalent implementations of the Adaptive composition experiment, stated before."
    ]
