--- a/notebooks/federated_models/federated_models_custom_model.ipynb
+++ b/notebooks/federated_models/federated_models_custom_model.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Federated learning: how to encapsulate a custom model in Sherpa.FL\n",
+    "# Federated learning: how to encapsulate a custom model in Sherpa.ai Federated Learning Framework\n",
     "\n",
-    "The present notebook tackles the problem encapsulating a custom machine learning model into *Sherpa.FL* for experimentation in the federated configuration. \n",
-    "In this case, we will create a learning model from scratch and show how to make it interact with the *Sherpa.FL* framework. \n",
+    "The present notebook tackles the problem encapsulating a custom machine learning model into *Sherpa.ai Federated Learning Framework* for experimentation in the federated configuration. \n",
+    "In this case, we will create a learning model from scratch and show how to make it interact with the *Sherpa.ai Federated Learning Framework*. \n",
     "For simplicity, a two-features case of linear regression is considered, since explicit formula for the minimization of the object function is available (see [Introduction to statistical learning](http://faculty.marshall.usc.edu/gareth-james/ISL/) Section 3.1).\n",
     "For completeness, we assess the *accuracy* in a federated learning context, and we address the *privacy level needed* in terms of sampling the sensitivity of our model for application of Differential Privacy. \n",
     "For a more extensive use of differential privacy with Federated Learning, see also notebooks on [Linear Regression](./federated_models_linear_regression.ipynb) and [K-means clustering](./federated_models_clustering_k_means.ipynb).\n",
@@ -201,7 +201,7 @@
     "In the case of applying the Laplace privacy mechanism (see also [Laplace mechanism notebook](../differential_privacy/differential_privacy_laplace.ipynb)), the noise added has to be of the order of the sensitivity of the model's output (the values of the intercept and slope in our 2D linear regression). \n",
     "In the general case, model's sensitivity might be difficult to compute analytically. \n",
     "An alternative approach is to attain *random* differential privacy through a sampling over the data (see [Rubinstein 2017](https://arxiv.org/pdf/1706.02562.pdf)). That is, instead of computing analytically the *global* sensitivity $\\Delta f$, we compute an *empirical estimation* of it by sampling over the dataset.\n",
-    "The framework provides a method to sample the sensitivity (see the implementation [here](https://github.com/sherpaai/Sherpa.FL/blob/master/shfl/differential_privacy/sensitivity_sampler.py)).\n",
+    "The framework provides a method to sample the sensitivity (see the implementation [here](https://github.com/sherpaai/Sherpa.ai-Federated-Learning-Framework/blob/master/shfl/differential_privacy/sensitivity_sampler.py)).\n",
     "\n",
     "In order to carry out this approach, we need to specify a distribution of the data to sample from. \n",
     "This in general requires previous knowledge and/or model assumptions. \n",
@@ -306,7 +306,7 @@
     "**Running the model in a Federated configuration with Differential Privacy.**\n",
     "At this stage we are ready to add a layer of DP to our federated learning model. \n",
     "We will apply the Laplace mechanism, assuming the sensitivity of our model is the one obtained from the previous sampling. \n",
-    "The Laplace mechanism provided by the *Sherpa.FL* Framework is then assigned as the *private* access type to the model's parameters of each client in a new `FederatedGovernment` object. \n",
+    "The Laplace mechanism provided by the *Sherpa.ai Federated Learning Framework* is then assigned as the *private* access type to the model's parameters of each client in a new `FederatedGovernment` object. \n",
     "This results into an $\\epsilon$-*differentially private FL model*.\n",
     "For example, picking the value $\\epsilon = 0.5$, we can run the FL experiment with DP:"
    ]
