--- a/notebooks/federated_models/federated_models_linear_regression.ipynb
+++ b/notebooks/federated_models/federated_models_linear_regression.ipynb
@@ -5,14 +5,14 @@
    "metadata": {},
    "source": [
     "# Federated learning: linear regression \n",
-    "We show how to set up a Linear Regression experiment in the Federated setting using *Sherpa.FL*. \n",
+    "We show how to set up a Linear Regression experiment in the Federated setting using *Sherpa.ai Federated Learning Framework*. \n",
     "Results from the Federated Learning are compared to the (non-federated) centralized learning. \n",
     "Moreover, we also show how the addition of Differential Privacy affects the performance of the Federated model. \n",
     "Ultimately, an application of the composition theorems for adaptive differential privacy is given. \n",
     "\n",
     "**Dataset.** In the present example, we will use the [California Housing dataset from sklearn](https://scikit-learn.org/stable/modules/generated/sklearn.datasets.fetch_california_housing.html). \n",
     "We only make use of two features in order to reduce the variance in the prediction. \n",
-    "*Sherpa.FL* allows to easily convert a generic dataset to interact with the platform:"
+    "*Sherpa.ai Federated Learning Framework* allows to easily convert a generic dataset to interact with the platform:"
    ]
   },
   {
@@ -107,7 +107,7 @@
    "metadata": {},
    "source": [
     "**Running the model in a Federated configuration** We're now ready to run the FL model. \n",
-    "The *Sherpa.FL* framework offers support for the Linear Regression model from [scikit-learn](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html). \n",
+    "The *Sherpa.ai Federated Learning Framework* offers support for the Linear Regression model from [scikit-learn](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html). \n",
     "The user must specify in advance the number of features and targets.\n",
     "Note that in this case, we set the number of rounds `n=1` since no iterations are needed in the case of linear regression. \n",
     "The performance metrics used are the Root Mean Squared Error (RMSE) and the $R^2$ score.\n",
@@ -159,7 +159,7 @@
     "That is, instead of computing analytically the *global* sensitivity $\\Delta f$, we compute an *empirical estimation* of it by sampling over the dataset.\n",
     "However, be advised that this would guarantee the *weaker* property of *random* differential privacy.\n",
     "This approach is convenient since allows for the sensitivity estimation of an arbitrary model or a black-box computer function.\n",
-    "The *Sherpa.FL* framework provides this functionality in the class `SensitivitySampler`.\n",
+    "The *Sherpa.ai Federated Learning Framework* provides this functionality in the class `SensitivitySampler`.\n",
     "\n",
     "We need to specify a distribution of the data to sample from. \n",
     "This in general requires previous knowledge and/or model assumptions. \n",
@@ -243,7 +243,7 @@
     "**Running the model in a Federated configuration with Differential Privacy.**\n",
     "At this stage we are ready to add a layer of DP to our federated learning model. \n",
     "We will apply the Laplace mechanism, employing the sensitivity obtained from the previous sampling. \n",
-    "The Laplace mechanism provided by the *Sherpa.FL* Framework is then assigned as the *private* access type to the model's parameters of each client in a new `FederatedGovernment` object. \n",
+    "The Laplace mechanism provided by the *Sherpa.ai Federated Learning Framework* is then assigned as the *private* access type to the model's parameters of each client in a new `FederatedGovernment` object. \n",
     "This results into an $\\epsilon$-*differentially private FL model*.\n",
     "For example, picking the value $\\epsilon = 0.5$, we can run the FL experiment with DP:"
    ]
@@ -277,7 +277,7 @@
    "metadata": {},
    "source": [
     "## Multiple queries: Composition of differential-private mechanisms using adaptivity\n",
-    "We here want to show the application of the composition theorems using adaptivity, as implemented in *Sherpa.FL* (see [Composition concepts notebook](../differential_privacy/differential_privacy_composition_concepts.ipynb)).\n",
+    "We here want to show the application of the composition theorems using adaptivity, as implemented in *Sherpa.ai Federated Learning Framework* (see [Composition concepts notebook](../differential_privacy/differential_privacy_composition_concepts.ipynb)).\n",
     "The idea is that we stop when the privacy budget is expended.\n",
     "This happens when the same query is executed on the clients' dataset, as this might disclose sensible information (see [The Algorithmic Foundations of Differential Privacy](https://www.cis.upenn.edu/~aaroth/Papers/privacybook.pdf), Section 3.5.2).\n",
     "Note that, when applying the composition theorems for privacy filters in the present example, we are assuming that the *estimated* sensitivity is a good enough approximation of the analytic sensitivity (see [Rogers 2016](https://papers.nips.cc/paper/6170-privacy-odometers-and-filters-pay-as-you-go-composition.pdf)).\n",
