--- a/notebooks/federated_models/federated_models_logistic_regression.ipynb
+++ b/notebooks/federated_models/federated_models_logistic_regression.ipynb
@@ -108,7 +108,7 @@
     "We distribute the data over the nodes, assuming the data is IID.\n",
     "Next, we define the aggregation of the federated outputs to be the *average* of the clients' models. \n",
     "\n",
-    "The *Sherpa.FL* framework offers support for the Logistic Regression model from [scikit-learn](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html). The user must specify in advance the number of features and the target classes: the assumption for this Federated Logistic Regression example is that each client's data possesses at least one sample of each class.\n",
+    "The *Sherpa.ai Federated Learning Framework* offers support for the Logistic Regression model from [scikit-learn](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html). The user must specify in advance the number of features and the target classes: the assumption for this Federated Logistic Regression example is that each client's data possesses at least one sample of each class.\n",
     "Otherwise, each node might train a different classification problem, and it would be problematic to aggregate the global model.\n",
     "Setting model's state parameter to `warm_start:True` tells the clients to restart the training from the Federated round update.\n",
     "For assessing the performance, we compute the *Balanced Accuracy* and the *Kohen Kappa* scores (see [metrics](https://scikit-learn.org/stable/modules/model_evaluation.html)):"
@@ -175,10 +175,10 @@
     "In particular, we will use the Laplace mechanism (see also the corresponding [Laplace mechanism notebook](../differential_privacy/differential_privacy_laplace.ipynb)). \n",
     "The noise added has to be of the order of the sensitivity of the model's output, i.e. the model parameters of our logistic regression. \n",
     "In general, the sensitivity of a Machine Learning model is difficult to compute (for the Logistic Regression case, refer to [Privacy-preserving logistic regression](http://papers.nips.cc/paper/3486-privacy-preserving-logistic-regression.pdf)). \n",
-    "An alternative strategy may be to estimate the sensitivity through a *sampling* procedure (e.g. see [Rubinstein 2017](https://arxiv.org/abs/1706.02562) and how to use the tools provided by Sherpa.FL in the [Linear Regression Notebook](../federated_models/federated_models_linear_regression.ipynb)). \n",
+    "An alternative strategy may be to estimate the sensitivity through a *sampling* procedure (e.g. see [Rubinstein 2017](https://arxiv.org/abs/1706.02562) and how to use the tools provided by Sherpa.ai Federated Learning Framework in the [Linear Regression Notebook](../federated_models/federated_models_linear_regression.ipynb)). \n",
     "However, be advised that this would guarantee the *weaker* property of *random* differential privacy.\n",
     "This approach is convenient since allows for the sensitivity estimation of an arbitrary model or a black-box computer function.\n",
-    "The *Sherpa.FL* framework provides this functionality in the class `SensitivitySampler`.\n",
+    "The *Sherpa.ai Federated Learning Framework* provides this functionality in the class `SensitivitySampler`.\n",
     "\n",
     "\n",
     "We need to specify a distribution of the data to sample from, and this in general requires previous knowledge and/or model assumptions. \n",
@@ -301,7 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Remark 1:** In this case we only run a few Federated rounds. However, in general one should make sure not to exceed a fixed privacy budget (see how to achieve that  in *Sherpa.FL* in the [Composition concepts notebook](../differential_privacy/differential_privacy_composition_concepts.ipynb)).   \n",
+    "**Remark 1:** In this case we only run a few Federated rounds. However, in general one should make sure not to exceed a fixed privacy budget (see how to achieve that  in *Sherpa.ai Federated Learning Framework* in the [Composition concepts notebook](../differential_privacy/differential_privacy_composition_concepts.ipynb)).   \n",
     "**Remark 2:** It is worth mentioning that the above results cannot be considered as general. Some factors that considerably influence the classification problem are, for example, the training dataset, the model type, and the Differential Privacy mechanism used. \n",
     "In fact, the classification problem itself depends on the training data (number of features, whether the classes are separable or not etc.). \n",
     "We strongly encourage the user to play with the values for generating the database (`n_features, n_classes, n_samples, class_sep ...` see [their meaning](https://scikit-learn.org/stable/modules/generated/sklearn.datasets.make_classification.html#sklearn.datasets.make_classification)), or try different classification datasets, since convergence and accuracy of local and global models can be strongly affected. \n",
