--- a/notebooks/federated_models/federated_models_clustering_k_means.ipynb
+++ b/notebooks/federated_models/federated_models_clustering_k_means.ipynb
@@ -96,7 +96,7 @@
     "\n",
     "Since the labels of clusters can vary among each node, we cannot average the centroids right away. \n",
     "A solution is to choose the lowest distance average: this is achieved by simply applying the k-means algorithm on the centroids coordinates of all nodes. \n",
-    "In [ClusterFedAvgAggregator](https://github.com/sherpaai/Sherpa.FL/blob/master/shfl/federated_aggregator/cluster_fedavg_aggregator.py) you can see its implementation.\n",
+    "In [ClusterFedAvgAggregator](https://github.com/sherpaai/Sherpa.ai-Federated-Learning-Framework/blob/master/shfl/federated_aggregator/cluster_fedavg_aggregator.py) you can see its implementation.\n",
     "\n",
     "**Remark**: this implementation is based on the assumption that the number of clusters is previously fixed across the clients, so it only works properly in I.I.D scenarios (see [Federated Sampling](../federated_learning/federated_learning_sampling.ipynb)). We are working in a federated aggregation operator which works in every distribution of data across clients."
    ]
@@ -175,7 +175,7 @@
     "\n",
     "That is, instead of computing analytically the *global* sensitivity $\\Delta f$, we compute an *empirical estimation* of it by sampling over the dataset.\n",
     "This approach is very convenient since allows for the sensitivity estimation of an arbitrary model or a black-box computer function.\n",
-    "The \\texttt{Sherpa.FL} framework provides this functionality in the class `SensitivitySampler`.\n",
+    "The \\texttt{Sherpa.ai Federated Learning Framework} framework provides this functionality in the class `SensitivitySampler`.\n",
     "\n",
     "In order to carry out this approach, we need to specify a distribution of the data to sample from. \n",
     "This in general requires previous knowledge and/or model assumptions. \n",
