--- a/notebooks/federated_models/federated_models_logistic_regression.ipynb
+++ b/notebooks/federated_models/federated_models_logistic_regression.ipynb
@@ -120,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from shfl.model.logistic_regression_model import LogisticRegressionModel\n",
+    "from shfl.model.linear_classifier_model import LogisticRegressionModel\n",
     "\n",
     "# Distribute data over the nodes:\n",
     "iid_distribution = shfl.data_distribution.IidDataDistribution(database)\n",
@@ -451,7 +451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
