--- a/notebooks/federated_learning/federated_learning_basic_concepts.ipynb
+++ b/notebooks/federated_learning/federated_learning_basic_concepts.ipynb
@@ -78,7 +78,7 @@
     "The assumption in this example is that the data is distributed as a set of independent and identically distributed random variables, with every node having approximately the same amount of data. \n",
     "There are a set of different possibilities for distributing the data. \n",
     "The distribution of the data is one of the factors that can have the most impact on a federated algorithm. Therefore, the framework has some of the most common distributions implemented, which allows you to easily experiment with different situations. \n",
-    "In [Federated Sampling](./federated_learning_sampling.ipynb), you can dig into the options that the framework provides, at the moment."
+    "In [Sampling Methods](./federated_learning_sampling.ipynb), you can dig into the options that the framework provides, at the moment."
    ]
   },
   {
@@ -123,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, private data in a node is not directly accesible, but the framework provides mechanisms to use this data in a machine learning model. A federated learning algorithm is defined by a machine learning model, locally deployed in each node, that learns from the respective node’s private data and an aggregating mechanism to aggregate the different model parameters uploaded by the client nodes to a central node. In this example, we will use a deep learning model using Keras to build it. The framework provides classes on using Tensorflow (see [Basic Concepts Tensorflow](./federated_learning_basic_concepts_tensorflow.ipynb)) and Keras models in a federated learning scenario, your only job is to create a function acting as model builder. Moreover, the framework provides classes on using pretrained Tensorflow and Keras models (see [Basic Concepts Pretrained Models](./federated_learning_basic_concepts_pretrained_model.ipynb)). In this example, we will build a Keras learning model.  "
+    "As we can see, private data in a node is not directly accesible, but the framework provides mechanisms to use this data in a machine learning model. A federated learning algorithm is defined by a machine learning model, locally deployed in each node, that learns from the respective node’s private data and an aggregating mechanism to aggregate the different model parameters uploaded by the client nodes to a central node. In this example, we will use a deep learning model using Keras to build it. The framework provides classes on using Tensorflow (see [Tensorflow Model](./federated_learning_basic_concepts_tensorflow.ipynb)) and Keras models in a federated learning scenario, your only job is to create a function acting as model builder. Moreover, the framework provides classes on using pretrained Tensorflow and Keras models (see [Pretrained Model](./federated_learning_basic_concepts_pretrained_model.ipynb)). In this example, we will build a Keras learning model.  "
    ]
   },
   {
@@ -182,7 +182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want to see all the aggregation operators, you can check out the [Federated Aggregation Operators](./federated_learning_basic_concepts_aggregation_operators.ipynb) notebook. Before running the algorithm, we want to apply a transformation to the data. A good practice is to define a federated operation that will ensure that the transformation is applied to the federated data in all the client nodes. We want to reshape the data, so we define the following FederatedTransformation."
+    "If you want to see all the aggregation operators, you can check out the [Aggregation Operators](./federated_learning_basic_concepts_aggregation_operators.ipynb) notebook. Before running the algorithm, we want to apply a transformation to the data. A good practice is to define a federated operation that will ensure that the transformation is applied to the federated data in all the client nodes. We want to reshape the data, so we define the following FederatedTransformation."
    ]
   },
   {
