Minor changes in tensorflow notebook

--- a/notebooks/federated_learning/federated_learning_basic_concepts_tensorflow.ipynb
+++ b/notebooks/federated_learning/federated_learning_basic_concepts_tensorflow.ipynb
@@ -97,7 +97,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, private data in a node is not directly accesible but the framework provides mechanisms to use this data in a machine learning model. A federated learning algorithm is defined by a machine learning model, locally deployed in each node, that learns from the respective node’s private data and an aggregating mechanism to aggregate the different model parameters uploaded by the client nodes to a central node. In this example we will build a Tensorflow learning model. The framework provides classes to allow using Tensorflow and Keras (see [Basic Concepts](./federated_learning_basic_concepts.ipynb)) models into a federated learning scenario, your job is only to create a function acting as model builder. Moreover, the framework provides classes to allow using pretrained Tensorflow and Keras models (see [Basic Concepts Pretrained Models](./federated_learning_basic_concepts_pretrained_model.ipynb)).   "
+    "As we can see, private data in a node is not directly accesible but the framework provides mechanisms to use this data in a machine learning model. A federated learning algorithm is defined by a machine learning model, locally deployed in each node, that learns from the respective node’s private data and an aggregating mechanism to aggregate the different model parameters uploaded by the client nodes to a central node. In this example we will build a Tensorflow learning model. The framework provides classes to allow using Tensorflow and Keras (see [Basic Concepts](./federated_learning_basic_concepts.ipynb)) models into a federated learning scenario, your job is only to create a function acting as model builder. Moreover, the framework provides classes to allow using pretrained Tensorflow and Keras models (see [Pretrained Model](./federated_learning_basic_concepts_pretrained_model.ipynb)).   "
    ]
   },
   {
@@ -196,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, the only piece missing is the aggregation operator. Nevertheless, the framework provides some aggregation operators that we can use. In the following piece of code, we define the federated aggregation mechanism. Moreover, we define the federated government based on the Keras learning model, the federated data, and the aggregation mechanism."
+    "Now, the only piece missing is the aggregation operator. Nevertheless, the framework provides some aggregation operators that we can use. In the following piece of code, we define the federated aggregation mechanism. Moreover, we define the federated government based on the Tensorflow learning model, the federated data, and the aggregation mechanism."
    ]
   },
   {
