Reviewed exponential mechanism notebook

--- a/notebooks/differential_privacy/differential_privacy_laplace.ipynb
+++ b/notebooks/differential_privacy/differential_privacy_laplace.ipynb
@@ -172,8 +172,8 @@
     "For smaller values of $\\epsilon$ , the amount of privacy is higher, but the utility is lower. For example, if you wish to compute the mean height over a given population, the accuracy of the result would degrade as the amount of privacy increases. This is shown in the experiment below.\n",
     "\n",
     "In particular, we consider a population of 500 people with a mean height $true_mean$. \n",
-    "However, these people reported their heights with a Laplace noise controlled by $\\epsilon$ and the sensitivity $\\Delta f$, which is then used to estimate the mean height. \n",
-    "Wee see that as $\\epsilon$ decreases, the error in this estimate increases."
+    "However, these people reported their height with a Laplace noise controlled by $\\epsilon$ and the sensitivity $\\Delta f$, which is then used to estimate the mean height. \n",
+    "As $\\epsilon$ decreases, the error in this estimate increases."
    ]
   },
   {
